Add license to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "nam/searching",
     "description": "",
+    "license": "MIT",
     "authors": [
         {
             "name": "Nam Hoang Luu",
